moved to package 'ru.perm.v'. Version 0.0.7